--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,447 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*-----------------RESPONSIVE*/
+/*-----------------LAYOUT*/
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Arial', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*-----------------------SCROLL*/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
 }
+
+@media only screen and (max-width: 425px) {
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 50px;
+  }
+}
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 50px;
+  }
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #dfdfdf;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #343a40;
+}
+
+@media only screen and (max-width: 425px) {
+  ::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background: #8e8e8e;
+  }
+}
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  ::-webkit-scrollbar-thumb {
+    background: #8e8e8e;
+  }
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4f575f;
+}
+
+/*-----------------RESPONSIVE*/
+/*-----------------NAV*/
+nav {
+  width: 12%;
+  padding: 1%;
+  position: fixed;
+  z-index: 99999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #121212;
+  height: 100%;
+}
+
+@media only screen and (max-width: 425px) {
+  nav {
+    width: 45%;
+    padding: 7%;
+    text-align: center;
+  }
+}
+
+.NavBtn {
+  background: black;
+  height: 35px;
+  width: 35px;
+  position: fixed;
+  z-index: 9999999;
+  border-radius: 100%;
+  padding: 5px;
+  margin: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 425px) {
+  .NavBtn {
+    margin: 4%;
+    margin-left: 80%;
+  }
+}
+
+.NavBtn img {
+  width: 50%;
+}
+
+nav a {
+  text-decoration: none;
+  color: #bbbbbb;
+  margin: 2% 0%;
+}
+
+nav a:hover {
+  color: #ececec;
+}
+
+/*-----------------RESPONSIVE*/
+/*-----------------MAIN*/
+main {
+  width: 100%;
+}
+
+section {
+  padding: 2%;
+}
+
+section h1 {
+  width: 80%;
+  margin: auto;
+  margin-top: 2%;
+  font-weight: 300;
+  color: #5e5e5e;
+  font-size: 28px;
+}
+
+video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  top: 0;
+}
+
+.VideoOverColor {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #000000b3;
+  z-index: 9;
+  top: 0;
+}
+
+.Search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 25%;
+}
+
+@media only screen and (max-width: 425px) {
+  .Search {
+    padding-top: 65%;
+  }
+}
+
+input {
+  z-index: 9999;
+  margin: auto;
+  padding: 0.5% 1%;
+  width: 50%;
+  border: 0px;
+  background: none;
+  border-bottom: 2px solid white;
+  color: white;
+  outline: none;
+}
+
+@media only screen and (max-width: 425px) {
+  input {
+    padding: 3.5% 4%;
+    width: 70%;
+  }
+}
+
+.SearchResultsWrapp {
+  padding: 2%;
+}
+
+@media only screen and (max-width: 425px) {
+  .SearchResultsWrapp {
+    padding-top: 4%;
+  }
+}
+
+.SearchResultsTop {
+  width: 80%;
+  margin: auto;
+}
+
+@media only screen and (max-width: 425px) {
+  .SearchResultsTop {
+    width: 90%;
+  }
+}
+
+.SearchResultsTop h1 {
+  margin-top: 2%;
+  font-weight: 300;
+  color: #5e5e5e;
+  font-size: 28px;
+}
+
+.SearchResultsTop button {
+  background: black;
+  border: 1px solid black;
+  color: white;
+  border-radius: 40px;
+  padding: 0.5% 2%;
+}
+
+@media only screen and (max-width: 425px) {
+  .SearchResultsTop button {
+    padding: 2.5% 4%;
+  }
+}
+
+.SearchResultsTop button:hover {
+  cursor: pointer;
+  background: #202020;
+}
+
+.SearchResults {
+  width: 80%;
+  margin: auto;
+  padding-top: 2%;
+}
+
+@media only screen and (max-width: 425px) {
+  .SearchResults {
+    width: 90%;
+    overflow-x: auto;
+  }
+}
+
+.SearchResults table {
+  width: 100%;
+  border-spacing: unset;
+}
+
+@media only screen and (max-width: 425px) {
+  .SearchResults table {
+    width: 260%;
+  }
+}
+
+.SearchResults table th {
+  text-align: left;
+  padding: 1%;
+  font-weight: 400;
+  color: #787878;
+  font-size: 14px;
+}
+
+.SearchResults table th:nth-child(2) {
+  text-align: center;
+}
+
+.SearchResults table td {
+  padding: 1%;
+  border-top: 1px solid #dddddd;
+  font-size: 15px;
+  color: #1e1e1e;
+  text-align: left;
+}
+
+.SearchResults table tbody tr:hover {
+  background-color: #f0f0f0;
+}
+
+.SearchResults table tr:last-child td {
+  border-bottom: 1px solid #dddddd;
+}
+
+.ResultImg {
+  width: 10%;
+}
+
+.ResultImg > div {
+  width: 30%;
+  margin: auto;
+}
+
+.ResultImg > div:hover {
+  cursor: pointer;
+}
+
+.SearchResults img {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+}
+
+@media only screen and (max-width: 425px) {
+  .SearchResults img {
+    width: 85%;
+  }
+}
+
+.ResultIndex {
+  text-align: center;
+}
+
+.ResultTitle:hover {
+  cursor: pointer;
+  color: #da1414;
+}
+
+.ArtistTable {
+  padding: 2% 0%;
+  margin: auto;
+}
+
+@media only screen and (max-width: 425px) {
+  .ArtistTable {
+    overflow-y: auto;
+    padding-top: 15%;
+  }
+}
+
+.ArtistTable table {
+  width: 80%;
+  margin: auto;
+  text-align: left;
+  border-spacing: unset;
+}
+
+@media only screen and (max-width: 425px) {
+  .ArtistTable table {
+    width: 260%;
+  }
+}
+
+.ArtistTable h3 {
+  width: 80%;
+  margin: auto;
+  padding-left: 1%;
+  border-left: 4px solid;
+}
+
+.ArtistTable table tbody td:nth-child(1) {
+  width: 25%;
+}
+
+.ArtistTable table tbody td:nth-child(2) {
+  width: 10%;
+}
+
+.ArtistTable table tbody td:nth-child(3) {
+  width: 25%;
+}
+
+.ArtistTable table th {
+  text-align: left;
+  padding: 1%;
+  font-weight: 400;
+  color: #787878;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.ArtistTable table td {
+  padding: 1%;
+  border-top: 1px solid #dddddd;
+  font-size: 14px;
+  color: #1e1e1e;
+  text-align: left;
+}
+
+.ArtistTable table tbody tr:hover {
+  background-color: #f0f0f0;
+}
+
+.ArtistTable table tr:last-child td {
+  border-bottom: 1px solid #dddddd;
+}
+
+.Spinner {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+
+.Spinner:after {
+  content: ' ';
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid teal;
+  border-color: teal transparent teal transparent;
+  -webkit-animation: Spinner 1.2s linear infinite;
+          animation: Spinner 1.2s linear infinite;
+}
+
+@-webkit-keyframes Spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes Spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+/*# sourceMappingURL=index.css.map */
